RESOLVED FIXED237126
[MacCatalyst] REGRESSION(r290091): sometimes can crash if `WKWebView` is deallocated before the next visible content rect update
https://bugs.webkit.org/show_bug.cgi?id=237126
Summary [MacCatalyst] REGRESSION(r290091): sometimes can crash if `WKWebView` is deal...
Devin Rousso
Reported 2022-02-23 19:04:06 PST
.
Attachments
Patch (10.04 KB, patch)
2022-02-23 19:06 PST, Devin Rousso
no flags
[fast-cq] Patch (9.82 KB, patch)
2022-02-24 08:55 PST, Devin Rousso
ews-feeder: commit-queue-
Devin Rousso
Comment 1 2022-02-23 19:05:05 PST
Devin Rousso
Comment 2 2022-02-23 19:06:22 PST
Tim Horton
Comment 3 2022-02-23 19:08:49 PST
Comment on attachment 453065 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=453065&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewResize.mm:44 > + if ([exception.name hasPrefix:@"Assertion deallocated before it was invalidated."]) Any exception during dealloc would be bad, not sure why you’re being so specific (and making the test extremely susceptible to false positives if the string changes)
Devin Rousso
Comment 4 2022-02-23 20:02:22 PST
Comment on attachment 453065 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=453065&action=review >> Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewResize.mm:44 >> + if ([exception.name hasPrefix:@"Assertion deallocated before it was invalidated."]) > > Any exception during dealloc would be bad, not sure why you’re being so specific (and making the test extremely susceptible to false positives if the string changes) Good point. Not really sure why I'm being so specific. I'll remove the `hasPrefix:` and unconditionally `didThrow = true` instead..
Devin Rousso
Comment 5 2022-02-24 08:55:48 PST
Created attachment 453104 [details] [fast-cq] Patch
Wenson Hsieh
Comment 6 2022-02-24 10:20:48 PST
*** Bug 237145 has been marked as a duplicate of this bug. ***
EWS
Comment 7 2022-02-24 10:31:11 PST
Committed r290442 (247745@main): <https://commits.webkit.org/247745@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453104 [details].
Note You need to log in before you can comment on or make changes to this bug.